gateway/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gateway
    labels:
        app: gateway
spec:
    replicas: 2
    selector:
        matchLabels:
            app: gateway
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 3
    template:
        metadata:
            labels:
                app: gateway
        spec:
            containers:
                - name: gateway
                  image: devpiush/python-microservice-gateway:latest
