gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: gateway-svc
    labels:
        app: gateway-svc
spec:
    selector:
        app: gateway
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
